[tool.poetry]
name = "dumbledore"
version = "0.1.0"
description = ""
authors = ["Mehdi Ghodsizadeh <mehdi.ghodsizadeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
